[package]
name = "rustc-less-ignore-debug"
authors = ["jieyouxu"]
license = "MIT OR Apache 2.0"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jieyouxu/rustc-less-ignore-debug"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = { version = "7.1.0", features = ["fancy"] }
confique = { version = "0.2.5", default-features = false, features = ["toml"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "env-filter",
    "std",
    "registry",
] }
indicatif = "0.17.7"
walkdir = "2.4.0"
serde = { version = "1.0.196", features = ["derive"] }
clap = { version = "4.5.0", features = ["derive"] }
thiserror = "1.0.57"
